--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,12 +1,13 @@
 <% if @displayed_projects.any? %>
 
-<%= render "projects/carousel" %>
+<%= render "carousel", projects: @displayed_projects %>
 
 <div class="container">
 	<br><br><br>
 	<h3 class="project-subtitle">Our Project</h3>
 	<div class="row">
-		<%= render 'projects' %>
+		<!-- passing the projects variable to the carousel partial, which is going to include the 4 displayed projects. -->
+		<%= render @projects %>
 	</div>
 </div>
 
