--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,40 @@
 			<div class="col-md-8">
 				<%= link_to image_tag(@project.image_url, alt: @project.name, width: '100%'), project_path(@project) %>
 			</div>
+			<div class="col-md-4">
+				<div class="project-mgmt">
+					<%= link_to 'Edit', edit_project_path(@project) %>
+					<%= link_to 'Delete', project_path(@project), method: :delete, data: {confirm: "Are you sure?"} %>
+				</div>
+                <%= render 'stats' %>
+                <%= link_to 'See project backers', "#", class: "btn btn-success btn-lg" %>
+                <%= link_to 'Back this project', "#", class: "btn btn-success btn-lg" %>
+                <p class="project-time">This project will expire in 3 days.</p>
+			</div>
+
+		</div>
+
+
+		<!-- small description -->
+		<div clas="row">
+			<div class="col-md-8">
+				<p class="project-small-description">Project small description.</p>
+			</div>
 		</div>
 		
+	</div>
+</div>
+
+<!-- rewards -->
+<div class="container">
+	<div class="row">
+		<div class="col-md-8">
+			<h3 class="project-subtitle">Rewards</h3>
+			<p><%= @project.description %></p>
+		</div>
+		<div class="col-md-4">
+			<p>Rewards will be rendered in here ...</p>
+			<%= link_to 'Add Reward', "#", class: "btn btn-primary" %>
+		</div>
 	</div>
 </div>
