--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -21,9 +21,7 @@
                 <%= link_to 'Back this project', "#", class: "btn btn-success btn-lg" %>
                 <p class="project-time">This project will expire in 3 days.</p>
 			</div>
-
 		</div>
-
 
 		<!-- small description -->
 		<div clas="row">
@@ -43,7 +41,7 @@
 			<p><%= @project.description %></p>
 		</div>
 		<div class="col-md-4">
-			<p>Rewards will be rendered in here ...</p>
+			<p><%= render 'rewards/reward' %></p>
 			<%= link_to 'Add Reward', new_project_reward_path(@project), class: "btn btn-primary" %>
 		</div>
 	</div>
