fixed rewards in the projects show view

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -4,6 +4,8 @@
 	<%= f.input :description, as: :wysihtml5 %>
 	<%= f.input :goal %>
 	<%= f.input :image_url %>
+	<%= f.input :expiration_date, as: :date_picker %>
+	
 	<div class="actions">
 		<%= f.button :submit %>
 	</div>
