--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,7 +16,7 @@
 <div class="container text-center">
 	<br><br><br>
 	<h2>Create your first project</h2>
-	<%= link_to "Start project!", "#", class: "btn btn-success btn-lg" %>
+	<%= link_to "Start project!", new_project_path, class: "btn btn-success btn-lg" %>
 </div>
 
 <% end %>
