--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,11 +1,11 @@
 <div class="col-md-4 col-sm-6 col-xs-12">
 
   <div class="project-box">
-    <%= link_to image_tag(project.image_url, alt: project.name, width: '100%', height: '200px'), "#" %>
+    <%= link_to image_tag(project.image_url, alt: project.name, width: '100%', height: '200px'), project_path(project) %>
     <div class="description-box">
       <!-- Project Title -->
       <div class="title">
-      	<%= link_to project.name, "#" %>
+      	<%= link_to project.name, project_path(project) %>
 	  </div>
 
 	  <!-- Project Description -->
