--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -26,7 +26,7 @@
 		<!-- small description -->
 		<div clas="row">
 			<div class="col-md-8">
-				<p class="project-small-description">Project small description.</p>
+				<p class="project-small-description"><%= @project.short_description %></p>
 			</div>
 		</div>
 		
@@ -37,11 +37,11 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-8">
-			<h3 class="project-subtitle">Rewards</h3>
+			<h3 class="project-subtitle">About this project</h3>
 			<p><%= @project.description %></p>
 		</div>
 		<div class="col-md-4">
-			<p><%= render 'rewards/reward' %></p>
+			<p><%= render @rewards %></p>
 			<%= link_to 'Add Reward', new_project_reward_path(@project), class: "btn btn-primary" %>
 		</div>
 	</div>
