Added working braintree intrface to pledge form

--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -5,8 +5,10 @@
     
     <fieldset>
         <legend>Card Information</legend>
-        <div class="card-fields"></div>
+        <div id="card-fields">
+        </div>
     </fieldset>
+    
     <fieldset>
         <legend>Billing Information</legend>
         <%= f.input :name %>
