--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,28 +1,26 @@
 <div class="project-intro">
-    <div class="container">
-        <div class="row">
-            <div class="col-md">
-                <h1>Payment Information</h1>
-                <p>Your card will not be charged at this time. If the project is successfully funded you will be charged <strong><%= number_to_currency(@amount, unit: "$", precision: 2) %> when the project ends</p></strong>
-                <br>
-                <%= render 'form' %>
-            </div>
-        </div>
-    </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Payment Information</h1>
+				<p>Your card will be not charged at this time. If the project is successfully funded your card will be charged <strong><%= number_to_currency(@amount, unit: '$', precision: 2) %></strong> when the project ends.</p>
+				<br>
+				<%= render 'form' %>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script type="text/javascript">
-    
-    var brain;
-    brain = function() {
-        var braintree = Braintree.create("<%= ENV['BRAINTREE_CLIENT_SIDE_ENCRYPTION_KEY'] %>")
-        braintree.onSubmitEncryptForm("braintree-payment-form")
-    }
-    
-    braintree.setup("<%= @client_token %>", 'dropin', {
-       container: "card-fields", 
-       paypal: {
-           singleUse: flase
-       }
-    });
+	var brain;
+	brain = function() {
+		var braintree = Braintree.create("<%= ENV['BRAINTREE_CLIENT_SIDE_ENCRYPTION_KEY'] %>")
+		braintree.onSubmitEncryptForm("braintree-payment-form");
+	}
+	braintree.setup("<%= @client_token %>", 'dropin', {
+		container: "card-fields",
+		paypal: {
+			singleUse: false
+		}
+	});
 </script>
