--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,36 +1,42 @@
+<% funded = project.funding_percentage %> 
+
+<!-- strat project box --> 
 <div class="col-md-4 col-sm-6 col-xs-12">
 
   <div class="project-box">
+		<!-- project image --> 
     <%= link_to image_tag(project.image_url, alt: project.name, width: '100%', height: '200px'), project_path(project) %>
+    
+    <!-- Project Title -->
     <div class="description-box">
-      <!-- Project Title -->
       <div class="title">
       	<%= link_to project.name, project_path(project) %>
 	  </div>
-
-	  <!-- Project Description -->
+		
+		<!-- Project Description -->
 	  <div class="description">
       <%= project.short_description %>
 	  </div>
 
 	  <!-- Project Progress Bar -->
-	  <div clas="project-bar">
-	    <div class="progress">
-	      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100%" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-	    	<span class="sr-only">100% Complete (Success)</span>
-	      </div>
-	    </div>
-	  </div>
+		<div class="project-bar">
+			<div class="progress">
+				<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="<%= funded %>" aria-valuemin="0" >aria-valuemax="100" style="width: <%= funded %>">
+					<span class="sr-only"><%= funded %> Complete (Success)</span>
+				</div>
+			</div>
+		</div>
 
 	  <!-- Project Stats -->
 	  <div class="stats">
 	    <ul>
 	  	  <!-- percentage of funding -->
-	  	  <li>100% <br><span class="label">funded</span></li>
+	  	  <li> <%= funded %>% <br> <span class="label">funded</span></li>
+	  	  
 	  	  <!-- total amount pledged (dollars) -->
-	  	  <li>$1000 <br><span class="label">pledged</span></li>
+	  	  <li>$<%= project.total_backed_amount %><br><span class="label">pledged</span></li>
 	  	  <!-- days to go 'till deadline -->
-	  	  <li>10 <br><span class="label">days to go</span></li>
+	  	  <li><%= project.days_to_go %><br><span class="label">days to go</span></li>
 	    </ul>
       </div>
 
