Fixed days_to_go in the stats view

--- a/app/views/projects/_stats.html.erb
+++ b/app/views/projects/_stats.html.erb
@@ -23,7 +23,7 @@
 		<!-- days to go -->
 		<div class="col-xs-4 col-sm-12">
 			<div class="val">
-				<%= @days_to_go %> 
+				<%= @project.days_to_go %>
 			</div>
 			<div class="lab">
 				days to go
