--- a/app/views/pledges/_pledge.html.erb
+++ b/app/views/pledges/_pledge.html.erb
@@ -1,6 +1,7 @@
 <tr>
 	<th scope="row"><%= pledge.id %></th>
 	<td><%= link_to pledge.project.name, project_path(pledge.project) %></td>
+	<td><%= pledge.user.email %></td>
 	<td><%= number_to_currency(pledge.amount, unit: "$") %></td>
-	<td><%= pledge.estimated_delivery %></td>
+	<td><%= pledge.reward.estimated_delivery %></td>
 </tr>
