--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,7 +33,7 @@
                 <% end %> 
                 
                 
-                <p class="project-time">This project will expire in 3 days.</p>
+                <p class="project-time">This project will expire in <%= @project.days_to_go %> days.</p>
 			</div>
 			
 		</div>
@@ -48,7 +48,6 @@
 	</div>
 </div>
 
-<!-- rewards -->
 <div class="container">
 	<div class="row">
 		<div class="col-md-8">
@@ -57,6 +56,7 @@
 		</div>
 		<div class="col-md-4">
 			
+			<!-- rewards -->
 			<p><%= render @rewards %></p>
 			
 			<!-- if project owner is logged in let them add reward --> 
